[package]
name = "prueba"
version = "0.1.0"
authors = ["CARLOS_PC <car.dav95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.0"
csv = "1.1.5"
rocket = "0.4.6"
serde = "*"
serde_derive = "*"